slightly less broken flask

--- a/broken-flask/website/templates/home.html
+++ b/broken-flask/website/templates/home.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %} 
-{% block title %}Home{% endblock %} 
-{% block content %}
-<h1 align="center">Dashboard</h1>
+{% extends "base.html" %}
 
-</ul>
+{% block content %}
+    <h1 align="center">Dashboard</h1>
+        <div id="dash-container">
+           
+        </div>
+
 {% endblock %}
